카테고리 바 만들기 ing

--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/개인/css/header_001.css
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/개인/css/header_001.css
@@ -43,3 +43,29 @@ a {
 .user{
   background:aquamarine; 
 }
+
+
+
+/* ============ 카테고리 바 만들기 ================*/
+#category-bar{
+
+}
+.category-button{
+  color:#71717171;
+  font-size: 12px;
+  font-weight:600;
+  cursor: pointer;
+  background:#fff;
+  border:none;
+}
+.category-button img{
+  width:28px;
+  /* height:24px; */
+  opacity: 0.5;
+}
+.category-button:active, .category-button:hover{
+  color:#000;
+}
+.category-button:active img, .category-button:hover img{
+  opacity: 1;;
+}
