--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/클론/css/clone_header001.css
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/클론/css/clone_header001.css
@@ -103,7 +103,8 @@ btn1"어디든지",span,btn2"언제든 일주일"이 선택되는것이다. */
   padding:5px 5px 5px 12px;
   align-items: center;
   border:1px solid #dddddd;
-  border-radius: 21px;
+  /* border-radius: 21px; */
+  border-radius: 40px;;
   /* flex안에 간격들은 gap으로 만들수 있다*/
   gap:12px;
   cursor: pointer;
@@ -113,14 +114,33 @@ btn1"어디든지",span,btn2"언제든 일주일"이 선택되는것이다. */
 }
 /* ============ 카테고리 바 만들기 ================*/
 #category-bar{
-
+display: flex;
+gap:32px;/*Q. gap이 반영이 안되는듯???*/
+padding:0 40px;
 }
 .category-button{
-  color:#71717171;
+  /* margin: 0 16px; */
+  color:#717171;
   font-size: 12px;
-  font-weight:600px;
+  font-weight:600;
+  cursor: pointer;
 }
+/* 비행기 sample은 이미 회색이라서 다른 그림들과 맞추기위해 opacity:1을 줌 */
+.category-button:nth-of-type(1) img{
+  opacity: 0.8;
+}
+.category-button:nth-of-type(1):active img{
+  opacity: 1;
+}
+
 .category-button img{
-  width:24px;
-  height:24px;
+  width:28px;/*width:24px;*/
+  /* height:28px; */
+  opacity: 0.5;
+}
+.category-button:active, .category-button:hover{
+  color:#000;
+}
+.category-button:active img, .category-button:hover img{
+  opacity: 1;
 }
