--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/css/index_parallx-scrolling.css
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/css/index_parallx-scrolling.css
@@ -95,9 +95,9 @@ a {
   min-height:1000px;
 }
 #document-title {
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
   color: #B8E1EE;
   font-size: 170%;
   font-weight: 300;
-  letter-spacing: 10px;
+  /* letter-spacing: 10px; */
 }
