--- a/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/css/index_parallx-scrolling.css
+++ b/HRD-Net__웹퍼블리싱 완전 정복_모션 디자인으로 완성하는 반응형 웹 디자인/실습/Clone_실습/css/index_parallx-scrolling.css
@@ -49,7 +49,8 @@ table {
 
 body {
   height: 200vh;
-  background-color: #00110C;
+  background-color: #00110C;/*바위까지 비슷한 백그라운드를 넣으므로써 연장되는거서럼 보인다.
+  */
 }
 
 header {
@@ -92,7 +93,7 @@ a {
   overflow: hidden;
 }
 #main-image{
-  min-height:1000px;
+  min-width:1000px;
 }
 #document-title {
   /* margin-bottom: 40px; */
